create and complete lodgement

--- a/src/App.css
+++ b/src/App.css
@@ -163,7 +163,6 @@ body {
   margin-left: auto;
   height: 100%;
   width: 100%;
-  border: 1px solid red;
   padding: 2rem;
   max-width: 1900px;
 }
@@ -184,6 +183,12 @@ body {
   padding: 2rem;
   justify-content: space-between;
   align-items: flex-start;
+}
+
+.home-wrapper {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .cover {
